<resources>
    <string name="app_name" >安全用药卫士</string>
    <string name="login" translatable = "false">登录</string>
    <string name="myAccount" translatable = "false">我的账户</string>
    <string name="existingAccountLogin" translatable = "false">已有账户      登录</string>
    <string name="completePersonalInformation" translatable = "false">完善个人信息</string>
    <string name="addMemberInformation" translatable = "false">添加成员信息</string>
    <string name="memberManage" translatable = "false">成员管理</string>
    <string name="modifyPassword" translatable = "false">修改密码</string>
    <string name="modifyMemberInformation" translatable = "false">修改成员信息</string>
    <string name="forgetPassword" translatable = "false">忘记密码</string>
    <string name="setup" translatable = "false">设置</string>
    <string name="complete" translatable = "false">完成</string>
    <string name="opinionFeedback" translatable = "false">意见反馈</string>
    <string name="aboutUs" translatable = "false">关于我们</string>
    <string name="takeDrugTime" translatable = "false">服药时间点</string>
    <string name="nextStep" translatable = "false">下一步</string>
    <string name="scan" translatable = "false">扫一扫</string>
    <string name="byTime" translatable = "false">按时间</string>
    <string name="delete" translatable = "false">删除</string>
    <string name="ringList" translatable = "false">铃音列表</string>
    <string name="companyIntroduce" translatable = "false">公司介绍</string>
    <string name="pleaseSetTakeDrugTime" translatable = "false">请设置用药时间</string>
    <string name="cuckoo" translatable = "false">布谷鸟</string>
    <string name="electric" translatable = "false">电子</string>
    <string name="happy" translatable = "false">欢乐</string>
    <string name="guitar" translatable = "false">吉他</string>
    <string name="churchRing" translatable = "false">教堂钟声</string>
    <string name="birdVoice" translatable = "false">鸟语</string>
    <string name="dogVoice" translatable = "false">犬吠</string>
    <string name="mysteryNote" translatable = "false">神秘音符</string>
    <string name="note" translatable = "false">音符</string>
    <string name="functionIntroduce" translatable = "false">功能介绍</string>
    <string name="welcomePage" translatable = "false">欢迎页</string>
    <string name="usingProtocol" translatable = "false">使用协议</string>
    <string name="toRating" translatable = "false">去评分</string>
    <string name="register" translatable = "false">注册</string>
    <string name="pleaseInputAuthCode" translatable = "false">请输入验证码</string>
    <string name="pleaseInput" translatable = "false">请输入</string>
    <string name="pleaseInputCellphoneNumber" translatable = "false">请输入手机号</string>
    <string name="relateDrug" translatable = "false">相关药品</string>
    <string name="existingAccountLoginNoSpace" translatable = "false">已有账户登录</string>
    <string name="familyMemberManage" translatable = "false">成员管理</string>
    <string name="pleaseInputYourCellphoneNumber" translatable = "false">请输入您的手机号</string>
    <string name="pleaseInputDrugName" translatable = "false">请输入药品名称</string>
    <string name="pleaseInputOldPassword" translatable = "false">请输入旧密码</string>
    <string name="honeyName" translatable = "false">昵称</string>
    <string name="remark" translatable = "false">备注</string>
    <string name="interval" translatable = "false">间隔</string>
    <string name="specialAdvice" translatable = "false">特殊医嘱</string>
    <string name="endTime" translatable = "false">结束日期</string>
    <string name="beginTime" translatable = "false">开始日期</string>
    <string name="drugDose" translatable = "false">用药剂量</string>
    <string name="drugFrequency" translatable = "false">用药频率</string>
    <string name="sex" translatable = "false">性别</string>
    <string name="man" translatable = "false">男</string>
    <string name="woman" translatable = "false">女</string>
    <string name="manualAdd" translatable = "false">手工添加</string>
    <string name="cellphoneNumber" translatable = "false">手机号</string>
    <string name="birthday" translatable = "false">生日</string>
    <string name="relaxTime" translatable = "false">作息时间</string>
    <string name="pleaseInputNewPassword" translatable = "false">请输入新密码</string>
    <string name="pleaseInputPassword" translatable = "false">请输入密码</string>
    <string name="passwordAtLeastSixCharacter" translatable = "false">密码至少6个字符</string>
    <string name="exit" translatable = "false">退出</string>
    <string name="userProtocol" translatable = "false">用户协议</string>
    <string name="openDrugRemind" translatable = "false">开启用药提醒</string>
    <string name="RingSetting" translatable = "false">铃音设置</string>
    <string name="save" translatable = "false">保存</string>
    <string name="cancel" translatable = "false">取消</string>
    <string name="confirm" translatable = "false">确认</string>
    <string name="myself" translatable = "false">自己</string>
    <string name="pleaseChoose" translatable = "false">请选择</string>
    <string name="pleaseInputHoneyName" translatable = "false">请输入昵称</string>
    <string name="pleaseInputEightChineseOrSixteenEnglishCharacterWithinHoneyName" translatable = "false">请输入8个中文或者16个英文字符以内的昵称</string>
    <string name="pleaseInputElevenCellphoneNum" translatable = "false">请输入11位手机号</string>
    <string name="pleaseSelectTime" translatable = "false">请选择时间</string>
    <string name="pleaseSelectPortrait" translatable = "false">请选择头像</string>
    <string name="pleaseSelectTakeDrugPeople" translatable = "false">请选择服药人</string>
    <string name="AddSelectTakeDrugPeople" translatable = "false">新增服药人</string>
    <string name="wakeUp" translatable = "false">起床</string>
    <string name="breakfast" translatable = "false">早餐</string>
    <string name="lunch" translatable = "false">午餐</string>
    <string name="dinner" translatable = "false">晚餐</string>
    <string name="sleep" translatable = "false">睡觉</string>
     <string name="logo_hint" translatable = "false">暂无数据，请添加</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
</resources>