<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgetPasswordFragment"
    android:layout_width="match_parent"
    android:background="@color/xmlBigBackgroundColor"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_height="@dimen/xmlTopTitleHeight"
        android:layout_width="match_parent"
        android:background="@color/xmlTopTitleBackgroundColor"
        android:id="@+id/top">

        <ImageButton
            android:id="@+id/back_modify_password"
            android:layout_height="@dimen/xmlTopLeftIconHeight"
            android:layout_width="@dimen/xmlTopLeftIconWidth"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/xmlTopLeftIconMargin"
            android:scaleType="centerInside"
            android:onClick="login"
            android:layout_centerInParent="true"
            android:background="@null"
            android:src="@drawable/fanhui" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/xmlTopTitleHeight"
            android:gravity="center"
            android:text="@string/modifyPassword"
            android:textColor="@color/xmlWhiteLineColor"
            android:textSize="@dimen/xmlTopTitleTextSize" />

        <TextView
            android:id="@+id/complete"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/xmlTopTitleHeight"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="@dimen/xmlTopRightTextPaddingSize"
            android:text="@string/complete"
            android:textColor="@color/xmlWhiteLineColor"
            android:textSize="@dimen/xmlTopRightTextSize" />
    </RelativeLayout>


    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/top"
        android:background="@color/xmlWhiteLineColor" />

    <RelativeLayout
        android:id="@+id/input_old_password"
        android:layout_marginLeft="@dimen/xmlModifyPasswordMiddleLeftMargin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/xmlMiddleContentHeight">

        <EditText
            android:id="@+id/old_password"
            android:selectAllOnFocus="true"
            android:textCursorDrawable="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xmlMiddleContentHeight"
            android:drawablePadding="@dimen/xmlModifyPasswordLeftPadding"
            android:background="@null"
            android:inputType="textPassword"
            android:cursorVisible="true"
            android:hint="@string/pleaseInputOldPassword" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/xmlModifyPasswordLittleGrayTextMargin"
        android:layout_marginRight="@dimen/xmlModifyPasswordLittleGrayTextMargin"
        android:layout_height="@dimen/xmlGrayLineHeight"
        android:background="@color/xmlGrayLineColor" />

    <RelativeLayout
        android:id="@+id/input_new_password"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/xmlModifyPasswordMiddleLeftMargin"
        android:layout_height="@dimen/xmlMiddleContentHeight">

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xmlMiddleContentHeight"
            android:textCursorDrawable="@null"
            android:selectAllOnFocus="true"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/pleaseInputNewPassword"
            android:drawablePadding="@dimen/xmlModifyPasswordLeftPadding"
            android:inputType="textPassword" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/xmlModifyPasswordLittleGrayTextMargin"
        android:layout_marginRight="@dimen/xmlModifyPasswordLittleGrayTextMargin"
        android:layout_height="@dimen/xmlGrayLineHeight"
        android:background="@color/xmlGrayLineColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xmlModifyPasswordLittleGrayTextMargin"
        android:layout_marginTop="@dimen/xmlModifyPasswordLittleGrayTextMargin"
        android:textSize="@dimen/xmlModifyPasswordLittleGrayTextSize"
        android:background="@null"
        android:cursorVisible="true"
        android:hint="@string/passwordAtLeastSixCharacter" />

</LinearLayout>